[gd_scene load_steps=21 format=2]

[ext_resource path="res://lava_blocks_with_new_lava_blocks.tres" type="TileSet" id=1]
[ext_resource path="res://ParallaxLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://ParallaxLayer2.tscn" type="PackedScene" id=3]
[ext_resource path="res://void.gd" type="Script" id=4]
[ext_resource path="res://lava_platform.tres" type="TileSet" id=5]
[ext_resource path="res://Fighting_Stage.gd" type="Script" id=6]
[ext_resource path="res://Interface/Interface.tscn" type="PackedScene" id=7]
[ext_resource path="res://CameraNew.tscn" type="PackedScene" id=8]
[ext_resource path="res://suskin_hieno_pilvi.png" type="Texture" id=9]
[ext_resource path="res://ParallaxLayer3.gd" type="Script" id=10]
[ext_resource path="res://Punching_bag.tscn" type="PackedScene" id=11]
[ext_resource path="res://effect_player.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=49]

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 8, 392 )

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 467.077, 8 )

[sub_resource type="Gradient" id=52]
offsets = PoolRealArray( 0.0296296, 0.404938, 0.745679, 0.982716, 1 )
colors = PoolColorArray( 1, 0.533203, 0, 1, 1, 0.275391, 0, 1, 1, 0.0878906, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=53]
gradient = SubResource( 52 )

[sub_resource type="ParticlesMaterial" id=54]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 96.57
flag_disable_z = true
direction = Vector3( -1, -1, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( -100, -100, 0 )
initial_velocity = 165.18
initial_velocity_random = 1.0
angular_velocity = 334.29
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 0.1
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 53 )
hue_variation = 0.05

[sub_resource type="Animation" id=56]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../TileMap:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=55]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.854902, 0.854902, 1 ), Color( 1, 0.941176, 0.862745, 1 ), Color( 1, 0.721569, 0.721569, 1 ), Color( 1, 0.933333, 0.933333, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../TileMap:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.854902, 0.854902, 1 ), Color( 1, 0.941176, 0.862745, 1 ), Color( 1, 0.721569, 0.721569, 1 ), Color( 1, 0.933333, 0.933333, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Fighting_Stage" type="Node2D"]
position = Vector2( -32, -96 )
script = ExtResource( 6 )

[node name="Spawn1" type="Position2D" parent="."]
position = Vector2( 607, 430 )

[node name="Spawn2" type="Position2D" parent="."]
position = Vector2( 383, 430 )

[node name="Interface" parent="." instance=ExtResource( 7 )]

[node name="Player1" type="Node2D" parent="."]

[node name="Player2" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 0, 500 )
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 500 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" parent="ParallaxBackground" instance=ExtResource( 2 )]
position = Vector2( 0, 4 )
motion_mirroring = Vector2( 1400, 1390 )

[node name="ParallaxLayer2" parent="ParallaxBackground" instance=ExtResource( 3 )]
motion_mirroring = Vector2( 1400, 1390 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 200, 50 )
motion_mirroring = Vector2( 1500, 0 )
script = ExtResource( 10 )
speed = 1.0

[node name="pilvet" type="Node2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( -100, -36.5 )

[node name="pilvi" type="Sprite" parent="ParallaxBackground/ParallaxLayer3/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 200, -300 )
scale = Vector2( 0.863, 1.135 )
texture = ExtResource( 9 )

[node name="pilvi5" type="Sprite" parent="ParallaxBackground/ParallaxLayer3/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 898.125, -270.875 )
scale = Vector2( 0.9675, 1.2075 )
texture = ExtResource( 9 )

[node name="pilvi2" type="Sprite" parent="ParallaxBackground/ParallaxLayer3/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 400, -212 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="pilvi4" type="Sprite" parent="ParallaxBackground/ParallaxLayer3/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 632, -220 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="pilvi6" type="Sprite" parent="ParallaxBackground/ParallaxLayer3/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 632, -220 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="pilvi3" type="Sprite" parent="ParallaxBackground/ParallaxLayer3/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 1112, -260 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -752, -204 )
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 200, 50 )
motion_mirroring = Vector2( 1500, 0 )
script = ExtResource( 10 )
speed = 1.0

[node name="pilvet" type="Node2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( -100, -36.5 )

[node name="pilvi" type="Sprite" parent="ParallaxBackground/ParallaxLayer4/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 200, -300 )
scale = Vector2( 0.863, 1.135 )
texture = ExtResource( 9 )

[node name="pilvi5" type="Sprite" parent="ParallaxBackground/ParallaxLayer4/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 898.125, -270.875 )
scale = Vector2( 0.9675, 1.2075 )
texture = ExtResource( 9 )

[node name="pilvi2" type="Sprite" parent="ParallaxBackground/ParallaxLayer4/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 400, -212 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="pilvi4" type="Sprite" parent="ParallaxBackground/ParallaxLayer4/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 632, -220 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="pilvi6" type="Sprite" parent="ParallaxBackground/ParallaxLayer4/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 632, -220 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="pilvi3" type="Sprite" parent="ParallaxBackground/ParallaxLayer4/pilvet"]
modulate = Color( 0.686275, 0.607843, 0.607843, 1 )
position = Vector2( 1112, -260 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground"]
anims/fade = SubResource( 49 )

[node name="void" type="Node2D" parent="."]
position = Vector2( 31, 95 )
script = ExtResource( 4 )

[node name="hitbox1" type="Node2D" parent="void"]

[node name="void_hitbox" type="Area2D" parent="void/hitbox1"]
collision_layer = 30
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="void/hitbox1/void_hitbox"]
position = Vector2( -200, 382 )
scale = Vector2( 1, 1.25 )
shape = SubResource( 50 )

[node name="hitbox2" type="Node2D" parent="void"]
position = Vector2( -311, 0 )

[node name="void_hitbox2" type="Area2D" parent="void/hitbox2"]
position = Vector2( 1024, 0 )
collision_layer = 30
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="void/hitbox2/void_hitbox2"]
position = Vector2( 594, 382 )
scale = Vector2( 1, 1.25 )
shape = SubResource( 50 )

[node name="hitbox3" type="Node2D" parent="void"]
position = Vector2( 0, -71 )
scale = Vector2( 1.3, 1 )

[node name="void_hitbox3" type="Area2D" parent="void/hitbox3"]
position = Vector2( 520, 8 )
collision_layer = 30
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="void/hitbox3/void_hitbox3"]
position = Vector2( -8, -8 )
scale = Vector2( 2, 1 )
shape = SubResource( 51 )

[node name="hitbox4" type="Node2D" parent="void"]
scale = Vector2( 1.25, 1 )

[node name="void_hitbox4" type="Area2D" parent="void/hitbox4"]
position = Vector2( 520, 33 )
collision_layer = 30
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="void/hitbox4/void_hitbox4"]
position = Vector2( 20.8, 760 )
scale = Vector2( 2.1, 1 )
shape = SubResource( 51 )

[node name="heat_effect" type="Particles2D" parent="."]
position = Vector2( 816, 704 )
z_index = -1
amount = 1000
lifetime = 4.0
preprocess = 5.0
speed_scale = 0.25
randomness = 1.0
visibility_rect = Rect2( -900, -400, 650, 400 )
process_material = SubResource( 54 )

[node name="CameraNew" parent="." instance=ExtResource( 8 )]
position = Vector2( 495, 430 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -100
limit_top = 0
limit_right = 1210
limit_bottom = 800
limit_smoothed = true
smoothing_speed = 0.5
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Punching_bag" parent="." instance=ExtResource( 11 )]
position = Vector2( 695, 478 )

[node name="effect_player" parent="." instance=ExtResource( 12 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 16.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1441825, 1, 0, 1441827, 2, 0, 1441828, 2, 0, 1441829, 2, 0, 1441830, 2, 0, 1441831, 2, 0, 1441832, 2, 0, 1441833, 2, 0, 1441834, 2, 0, 1441835, 2, 0, 1441836, 2, 0, 1441837, 2, 0, 1441838, 2, 0, 1441840, 0, 0 )

[node name="TileMap2" type="TileMap" parent="."]
modulate = Color( 1, 0.869748, 0.869748, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 983060, 2, 0, 983061, 15, 0, 983062, 0, 0, 983063, 17, 0, 983064, 16, 0, 983065, 0, 0, 983066, 17, 0, 983067, 16, 0, 983068, 536870914, 0, 1048587, 2, 0, 1048588, 16, 0, 1048589, 15, 0, 1048590, 17, 0, 1048591, 16, 0, 1048592, 16, 0, 1048593, 17, 0, 1048594, 16, 0, 1048595, 536870914, 0, 1048596, 10, 0, 1048597, 13, 0, 1048598, 12, 0, 1048599, 3, 0, 1048600, 13, 0, 1048601, 3, 0, 1048602, 12, 0, 1048603, 13, 0, 1048604, 11, 0, 1114123, 10, 0, 1114124, 13, 0, 1114125, 14, 0, 1114126, 3, 0, 1114127, 13, 0, 1114128, 14, 0, 1114129, 12, 0, 1114130, 13, 0, 1114131, 11, 0, 1114132, 10, 0, 1114133, 3, 0, 1114134, 14, 0, 1114135, 3, 0, 1114136, 12, 0, 1114137, 12, 0, 1114138, 13, 0, 1114139, 3, 0, 1114140, 11, 0, 1179659, 10, 0, 1179660, 3, 0, 1179661, 14, 0, 1179662, 3, 0, 1179663, 12, 0, 1179664, 14, 0, 1179665, 13, 0, 1179666, 3, 0, 1179667, 11, 0, 1179668, 10, 0, 1179669, 3, 0, 1179670, 13, 0, 1179671, 3, 0, 1179672, 14, 0, 1179673, 13, 0, 1179674, 3, 0, 1179675, 12, 0, 1179676, 11, 0, 1245195, 10, 0, 1245196, 3, 0, 1245197, 13, 0, 1245198, 3, 0, 1245199, 14, 0, 1245200, 13, 0, 1245201, 3, 0, 1245202, 12, 0, 1245203, 11, 0, 1245204, 10, 0, 1245205, 3, 0, 1245206, 12, 0, 1245207, 3, 0, 1245208, 13, 0, 1245209, 12, 0, 1245210, 3, 0, 1245211, 3, 0, 1245212, 11, 0, 1310731, 10, 0, 1310732, 3, 0, 1310733, 12, 0, 1310734, 3, 0, 1310735, 13, 0, 1310736, 12, 0, 1310737, 3, 0, 1310738, 13, 0, 1310739, 11, 0, 1310740, 10, 0, 1310741, 12, 0, 1310742, 13, 0, 1310743, 3, 0, 1310744, 3, 0, 1310745, 14, 0, 1310746, 12, 0, 1310747, 3, 0, 1310748, 11, 0, 1376267, 10, 0, 1376268, 12, 0, 1376269, 13, 0, 1376270, 3, 0, 1376271, 3, 0, 1376272, 14, 0, 1376273, 12, 0, 1376274, 3, 0, 1376275, 11, 0, 1376276, 10, 0, 1376277, 13, 0, 1376278, 12, 0, 1376279, 3, 0, 1376280, 12, 0, 1376281, 14, 0, 1376282, 13, 0, 1376283, 3, 0, 1376284, 11, 0, 1441803, 10, 0, 1441804, 13, 0, 1441805, 12, 0, 1441806, 3, 0, 1441807, 3, 0, 1441808, 14, 0, 1441809, 13, 0, 1441810, 3, 0, 1441811, 11, 0, 1441812, 10, 0, 1441813, 3, 0, 1441814, 13, 0, 1441815, 3, 0, 1441816, 14, 0, 1441817, 13, 0, 1441818, 3, 0, 1441819, 3, 0, 1441820, 11, 0, 1507339, 10, 0, 1507340, 3, 0, 1507341, 14, 0, 1507342, 3, 0, 1507343, 3, 0, 1507344, 13, 0, 1507345, 3, 0, 1507346, 3, 0, 1507347, 11, 0, 1507348, 10, 0, 1507349, 3, 0, 1507350, 3, 0, 1507351, 3, 0, 1507352, 14, 0, 1507353, 3, 0, 1507354, 3, 0, 1507355, 3, 0, 1507356, 11, 0, 1572875, 10, 0, 1572876, 3, 0, 1572877, 14, 0, 1572878, 3, 0, 1572879, 3, 0, 1572880, 3, 0, 1572881, 3, 0, 1572882, 3, 0, 1572883, 11, 0, 1572884, 10, 0, 1572885, 12, 0, 1572886, 12, 0, 1572887, 3, 0, 1572888, 3, 0, 1572889, 3, 0, 1572890, 12, 0, 1572891, 3, 0, 1572892, 11, 0, 1638411, 10, 0, 1638412, 3, 0, 1638413, 14, 0, 1638414, 3, 0, 1638415, 12, 0, 1638416, 12, 0, 1638417, 3, 0, 1638418, 3, 0, 1638419, 11, 0, 1638420, 10, 0, 1638421, 13, 0, 1638422, 14, 0, 1638423, 3, 0, 1638424, 12, 0, 1638425, 3, 0, 1638426, 13, 0, 1638427, 3, 0, 1638428, 11, 0, 1703947, 10, 0, 1703948, 3, 0, 1703949, 13, 0, 1703950, 3, 0, 1703951, 14, 0, 1703952, 13, 0, 1703953, 3, 0, 1703954, 12, 0, 1703955, 11, 0, 1703956, 10, 0, 1703957, 3, 0, 1703958, 14, 0, 1703959, 3, 0, 1703960, 13, 0, 1703961, 12, 0, 1703962, 3, 0, 1703963, 3, 0, 1703964, 11, 0, 1769483, 10, 0, 1769484, 3, 0, 1769485, 12, 0, 1769486, 3, 0, 1769487, 13, 0, 1769488, 12, 0, 1769489, 3, 0, 1769490, 3, 0, 1769491, 11, 0, 1769492, 10, 0, 1769493, 12, 0, 1769494, 13, 0, 1769495, 3, 0, 1769496, 3, 0, 1769497, 14, 0, 1769498, 12, 0, 1769499, 3, 0, 1769500, 11, 0, 1835019, 10, 0, 1835020, 12, 0, 1835021, 13, 0, 1835022, 3, 0, 1835023, 3, 0, 1835024, 14, 0, 1835025, 12, 0, 1835026, 3, 0, 1835027, 11, 0, 1835028, 10, 0, 1835029, 13, 0, 1835030, 12, 0, 1835031, 3, 0, 1835032, 12, 0, 1835033, 14, 0, 1835034, 13, 0, 1835035, 3, 0, 1835036, 11, 0, 1900555, 10, 0, 1900556, 13, 0, 1900557, 12, 0, 1900558, 3, 0, 1900559, 3, 0, 1900560, 14, 0, 1900561, 13, 0, 1900562, 3, 0, 1900563, 11, 0, 1900564, 10, 0, 1900565, 3, 0, 1900566, 13, 0, 1900567, 3, 0, 1900568, 14, 0, 1900569, 13, 0, 1900570, 3, 0, 1900571, 3, 0, 1900572, 11, 0, 1966091, 10, 0, 1966092, 3, 0, 1966093, 13, 0, 1966094, 3, 0, 1966095, 3, 0, 1966096, 13, 0, 1966097, 3, 0, 1966098, 3, 0, 1966099, 11, 0, 1966100, 10, 0, 1966101, 3, 0, 1966102, 3, 0, 1966103, 3, 0, 1966104, 14, 0, 1966105, 3, 0, 1966106, 3, 0, 1966107, 3, 0, 1966108, 11, 0, 2031627, 10, 0, 2031628, 3, 0, 2031629, 3, 0, 2031630, 3, 0, 2031631, 3, 0, 2031632, 3, 0, 2031633, 3, 0, 2031634, 3, 0, 2031635, 11, 0, 2031636, 10, 0, 2031637, 3, 0, 2031638, 3, 0, 2031639, 3, 0, 2031640, 3, 0, 2031641, 3, 0, 2031642, 3, 0, 2031643, 3, 0, 2031644, 11, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TileMap2"]
autoplay = "fade"
anims/RESET = SubResource( 56 )
anims/fade = SubResource( 55 )

[connection signal="area_entered" from="void/hitbox1/void_hitbox" to="void" method="_on_void_hitbox_area_entered"]
[connection signal="area_entered" from="void/hitbox2/void_hitbox2" to="void" method="_on_void_hitbox_area_entered"]
[connection signal="area_entered" from="void/hitbox3/void_hitbox3" to="void" method="_on_void_hitbox_area_entered"]
[connection signal="area_entered" from="void/hitbox4/void_hitbox4" to="void" method="_on_void_hitbox_area_entered"]
